plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'me.giobyte8.galleries'
version = '2.0.0'

// REPLACED: sourceCompatibility = 'xx'
// BEST PRACTICE: Use Java Toolchain for explicit Java version support.
// This ensures Gradle uses the correct JDK, even if your local JAVA_HOME is different.
java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.neo4j.driver:neo4j-java-driver:6.0.2'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-opentelemetry'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'com.drewnoakes:metadata-extractor:2.19.0'
	implementation 'commons-codec:commons-codec:1.20.0'

	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
	annotationProcessor 'org.projectlombok:lombok:1.18.42'

	compileOnly 'org.projectlombok:lombok:1.18.42'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

// Introducing test suites blog: https://blog.gradle.org/introducing-test-suites
// Reference: https://docs.gradle.org/7.6.1/userguide/jvm_test_suite_plugin.html#sec:jvm_test_suite_usage
testing {
	suites {
		configureEach {
			useJUnitJupiter()
			dependencies {
				implementation 'org.springframework.boot:spring-boot-starter-test'
			}
		}

		test(JvmTestSuite)

		integrationTest(JvmTestSuite) {
			dependencies {
				implementation project()
				implementation 'org.neo4j.driver:neo4j-java-driver:6.0.2'

				// Spring Boot Testcontainers Support
				implementation 'org.springframework.boot:spring-boot-testcontainers'

				// Testcontainers BOM and Modules
				implementation platform('org.testcontainers:testcontainers-bom:2.0.3')
				implementation 'org.testcontainers:testcontainers-junit-jupiter'
				implementation 'org.testcontainers:testcontainers-neo4j'
				implementation 'org.testcontainers:testcontainers-rabbitmq'

			}

			targets {
				all {
					testTask.configure {
						shouldRunAfter(test)
					}
				}
			}
		}
	}
}

//tasks.named('check') {
//	dependsOn(testing.suites.integrationTest)
//}
